--- a/html/.settings/com.google.gdt.eclipse.core.prefs
+++ b/html/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,5 +1,5 @@
-#Sun Aug 03 21:14:25 CEST 2014
+#Thu Oct 30 19:22:58 CET 2014
 warSrcDir=webapp/
-lastWarOutDir=C\:\\Users\\Evelan\\Moje Programowanie\\Eclipse\\Pax-Cosmica\\html\\war
+lastWarOutDir=D\:\\Pax-Cosmica\\html\\war
 eclipse.preferences.version=1
 warSrcDirIsOutput=false
